--- a/dependencies/build.gradle
+++ b/dependencies/build.gradle
@@ -32,11 +32,8 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    api('androidx.core:core-ktx:1.6.0')
+    api('androidx.appcompat:appcompat:1.3.1')
+    api('com.google.android.material:material:1.4.0')
+    api('androidx.constraintlayout:constraintlayout:2.1.1')
 }
