--- a/dependencies/build.gradle
+++ b/dependencies/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     api('androidx.appcompat:appcompat:1.3.1')
     api('com.google.android.material:material:1.4.0')
     api('androidx.constraintlayout:constraintlayout:2.1.1')
+    
+    // KTX
+    api('androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0')
 }
