--- a/home/build.gradle
+++ b/home/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
 
@@ -7,7 +7,6 @@ android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "com.topview.purejoy"
         minSdk 21
         targetSdk 30
         versionCode 1
@@ -34,8 +33,7 @@ android {
 dependencies {
     implementation project(":dependencies")
     implementation project(":common")
-    implementation project(":home")
-    
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
