feat(project): Make HomeActivity be launch activity

--- a/home/src/main/AndroidManifest.xml
+++ b/home/src/main/AndroidManifest.xml
@@ -3,11 +3,19 @@
     package="com.topview.purejoy.home">
 
     <application
-        android:theme="@style/Theme.PureJoy">
+        android:theme="@style/Theme.PureJoy"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".HomeActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
