--- a/musiclibrary/src/main/AndroidManifest.xml
+++ b/musiclibrary/src/main/AndroidManifest.xml
@@ -2,4 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.topview.purejoy.musiclibrary">
 
+    <application>
+        <activity
+            android:name=".recommendation.music.view.DailyRecommendActivity"
+            android:exported="false" />
+    </application>
+
 </manifest>
