--- a/dependencies/build.gradle
+++ b/dependencies/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     // glide
     api('com.github.bumptech.glide:glide:4.12.0')
 
+    // BaseRecyclerViewAdapterHelper
+    api('com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7')
 }
