--- a/musiclibrary/src/main/AndroidManifest.xml
+++ b/musiclibrary/src/main/AndroidManifest.xml
@@ -3,13 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.topview.purejoy.musiclibrary">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:usesCleartextTraffic="true"
+    <application
+        android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <activity
+            android:name=".playing.view.PlayingActivity"
+            android:theme="@style/slideAnimationActivity"
+            android:exported="false" />
         <activity
             android:name=".recommendation.music.view.DailyRecommendActivity"
             android:exported="false" />
     </application>
+
+
 
 </manifest>
