--- a/dependencies/build.gradle
+++ b/dependencies/build.gradle
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
+    def compose_version = '1.0.5'
+
     api('androidx.core:core-ktx:1.6.0')
     api('androidx.appcompat:appcompat:1.3.1')
     api('com.google.android.material:material:1.4.0')
@@ -56,4 +58,10 @@ dependencies {
 
     // BaseRecyclerViewAdapterHelper
     api('com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7')
+
+    // compose
+    api("androidx.compose.ui:ui:$compose_version")
+    api("androidx.compose.material:material:$compose_version")
+    api("androidx.compose.ui:ui-tooling-preview:$compose_version")
+    api("androidx.compose.runtime:runtime-livedata:$compose_version")
 }
