--- a/musiclibrary/build.gradle
+++ b/musiclibrary/build.gradle
@@ -40,7 +40,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'com.android.support:palette-v7:28.0.0'
+    implementation 'androidx.palette:palette-ktx:1.0.0'
+    implementation 'jp.wasabeef:glide-transformations:3.3.0'
     implementation project(":common")
     implementation project(":dependencies")
     testImplementation 'junit:junit:4.+'
