feat: add layout for login, add xml for navigation, add Activity manifest, add dependencies

--- a/home/src/main/AndroidManifest.xml
+++ b/home/src/main/AndroidManifest.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.topview.purejoy.home">
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
     <application
         android:theme="@style/Theme.PureJoy"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".tasks.login.LoginActivity"
+            android:exported="false" >
+        </activity>
         <activity
             android:name=".HomeActivity"
             android:exported="true">
