feat(home): add TopListActivity and TopListViewModel, TopListActivity is now available

--- a/home/src/main/AndroidManifest.xml
+++ b/home/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
             android:name=".tasks.login.LoginActivity"
             android:exported="false" >
         </activity>
+        <activity android:name=".tasks.toplist.TopListActivity"
+            android:exported="false">
+        </activity>
         <activity
             android:name=".HomeActivity"
             android:exported="true">
