--- a/musiclibrary/src/main/AndroidManifest.xml
+++ b/musiclibrary/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
-    <application
-        android:usesCleartextTraffic="true"
+    <application android:usesCleartextTraffic="true"
         tools:targetApi="m">
         <activity
             android:name=".playing.view.PlayingActivity"
