--- a/musiclibrary/src/main/AndroidManifest.xml
+++ b/musiclibrary/src/main/AndroidManifest.xml
@@ -3,21 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.topview.purejoy.musiclibrary">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-
-    <application android:usesCleartextTraffic="true"
+    <application
+        android:usesCleartextTraffic="true"
         tools:targetApi="m">
         <activity
-            android:name=".playing.view.PlayingActivity"
-            android:theme="@style/slideAnimationActivity"
+            android:name=".playlist.detail.view.PlaylistDetailActivity"
             android:exported="false" />
+        <activity
+            android:name=".playing.view.PlayingActivity"
+            android:exported="false"
+            android:theme="@style/slideAnimationActivity" />
         <activity
             android:name=".recommendation.music.view.DailyRecommendActivity"
             android:exported="false" />
-        <service android:name=".service.MusicService" android:process=":music"/>
+
+        <service
+            android:name=".service.MusicService"
+            android:process=":music" />
     </application>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
