fix(video): release exoplayer when activity onDestroy

--- a/video/src/main/AndroidManifest.xml
+++ b/video/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".VideoActivity"
+            android:name=".ui.VideoActivity"
             android:exported="false">
         </activity>
     </application>
