fix(video): prohibit activity from destroying while rotating

--- a/video/src/main/AndroidManifest.xml
+++ b/video/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.VideoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false">
         </activity>
     </application>
