refactor(home|common): Migrate DownloadManageActivity from home to common module

--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         <service
             android:name=".music.service.MusicService"
             android:process=":music" />
+
+        <activity
+            android:name=".business.download.manage.DownloadManageActivity"
+            android:exported="false">
+            
+        </activity>
     </application>
 
 </manifest>
