feat(common): When task is downloading,it will show a notification

--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
 
         <activity
             android:name=".business.download.manage.DownloadManageActivity"
-            android:exported="false">
-            
-        </activity>
+            android:exported="false"
+            android:launchMode="singleTop"/>
     </application>
 
 </manifest>
