--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -7,14 +7,20 @@
             android:name=".component.webview.CommonWebViewActivity"
             android:exported="false" />
 
-        <service
-            android:name=".music.service.MusicService"
-            android:process=":music" />
-
         <activity
             android:name=".business.download.manage.DownloadManageActivity"
             android:exported="false"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop" />
+
+        <provider
+            android:name=".component.download.util.ContextProvider"
+            android:authorities="com.topview.purejoy.common.download"
+            android:enabled="true"
+            android:exported="false" />
+
+        <service
+            android:name=".music.service.MusicService"
+            android:process=":music" />
     </application>
 
 </manifest>
